Bump to java 21+